--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,12 @@
-# Frontend Dockerfile - build static and serve with serve
-FROM node:18-alpine AS builder
+FROM node:18-alpine
+
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
-RUN npm install --legacy-peer-deps
+COPY package*.json ./
+RUN npm install
 
 COPY . .
-RUN npm run build
 
-FROM node:18-alpine
-WORKDIR /app
-RUN npm i -g serve
-COPY --from=builder /app/dist ./dist
 EXPOSE 3000
-CMD ["serve", "-s", "dist", "-l", "3000"]
+
+CMD ["npm", "run", "dev", "--", "--host"]
