--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
-version: '3.8'
+version: "3.9"
 
 services:
   database:
     image: postgres:15
-    container_name: database
+    container_name: saas_database
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: saas_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./backend/migrations:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -20,19 +21,11 @@ services:
 
   backend:
     build: ./backend
-    container_name: backend
+    container_name: saas_backend
     ports:
       - "5000:5000"
-    environment:
-      DB_HOST: database
-      DB_PORT: 5432
-      DB_NAME: saas_db
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      JWT_SECRET: super_secret_test_key_at_least_32_chars!
-      JWT_EXPIRES_IN: 24h
-      PORT: 5000
-      FRONTEND_URL: http://localhost:3000
+    env_file:
+      - ./backend/.env
     depends_on:
       database:
         condition: service_healthy
@@ -44,12 +37,14 @@ services:
 
   frontend:
     build: ./frontend
-    container_name: frontend
+    container_name: saas_frontend
     ports:
       - "3000:3000"
     depends_on:
       backend:
         condition: service_healthy
+    environment:
+      - VITE_API_URL=http://localhost:5000/api
 
 volumes:
   db_data:
